--- a/src/ExampleButton/ExampleButton.module.css
+++ b/src/ExampleButton/ExampleButton.module.css
@@ -1,16 +1,16 @@
-[data-button] {
+.button {
   border-radius: 5px;
   padding: 10px 20px;
   font-weight: bold;
   border: 1px solid #000000;
 }
 
-[data-button~="kind:primary"] {
+.button .primary {
   background-color: #000000;
   color: #ffffff;
 }
 
-[data-button~="kind:secondary"] {
+.button .secondary {
   background-color: #ffffff;
   color: #000000;
 }
