--- a/src/stories/ExampleCard/ExampleCard.module.css
+++ b/src/stories/ExampleCard/ExampleCard.module.css
@@ -1,20 +1,17 @@
-
-.card {
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding: 1em;
+.article {
+  width: 20rem;
+  height: 30rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  justify-content: space-evenly;
+  padding: 0.5rem 1rem;
+  border: 2px solid black;
 }
-
-.card:hover {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+.lightMode {
+  color: #333;
+  background-color: #fee;
 }
-
-.cardImage {
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
+.darkMode {
+  color: #fee;
+  background-color: #333;
 }
